modules/mod-104-kubernetes/exercise-01-k8s-fundamentals/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: { name: iris, labels: { app: iris, env: dev } }
