modules/mod-104-kubernetes/exercise-01-k8s-fundamentals/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-api
  namespace: iris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: iris.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iris-api
                port: { name: http }
